[package]
name = "rayslash-me"
version = "0.1.0"
authors = ["RaySlash <stevemathewjoy@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus/", rev="2ade193", version = "0.4.3", features= ["router", "web"] }
dioxus-free-icons = { path = "../dioxus-free-icons/packages/lib", version = "0.7.0", features = ["font-awesome-regular", "font-awesome-brands"] }

emojis = "0.6.1"

# Debug
log = "0.4.19"
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"
chrono = "0.4.33"
